Bug 97761 - es2-cts.gtf.gl2extensiontests.egl_image_external.testsimpleunassociated crashes
Summary: es2-cts.gtf.gl2extensiontests.egl_image_external.testsimpleunassociated crashes
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) other
: medium normal
Assignee: Antia Puentes
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-10 15:57 UTC by Mark Janes
Modified: 2016-09-12 17:24 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2016-09-10 15:57:59 UTC
Bisected to:
mesa 83e8617f4b13e75f44ba45dd156c0656a5e07b08
Author:     Antia Puentes <apuentes@igalia.com>
i965: Fix calculation of the image height at start level

Standard Output

/tmp/build_root/m64/bin/es/cts/glcts --deqp-case=ES2-CTS.gtf.GL2ExtensionTests.egl_image_external.TestSimpleUnassociated
dEQP Core GL-CTS-2.0 (0x0052484b) starting..
  target implementation = 'intel-gbm'

Test case 'ES2-CTS.gtf.GL2ExtensionTests.egl_image_external.TestSimpleUnassociated'..

Standard Error

glcts: /home/jenkins/workspace/Leeroy_2/repos/mesa/src/mesa/drivers/dri/i965/intel_tex_image.c:70: intel_miptree_create_for_teximage: Assertion `!"Unexpected target"' failed.
Comment 1 Ilia Mirkin 2016-09-10 16:19:59 UTC
Looks like GL_TEXTURE_EXTERNAL_OES was forgotten. Should be added to the no-mipmaps case, I believe.
Comment 2 Alejandro Piñeiro (freenode IRC: apinheiro) 2016-09-10 16:35:35 UTC
(In reply to Mark Janes from comment #0)

> glcts:
> /home/jenkins/workspace/Leeroy_2/repos/mesa/src/mesa/drivers/dri/i965/
> intel_tex_image.c:70: intel_miptree_create_for_teximage: Assertion
> `!"Unexpected target"' failed.

FWIW, this regression doesn't happen on all hw. It happens on Haswell for example. But on Skylake, with or without that patch, it asserts on a different place:

glcts: intel_mipmap_tree.c:2191: intel_miptree_make_shareable: Assertion `mt->msaa_layout == INTEL_MSAA_LAYOUT_NONE' failed.
Aborted

Pending to test on Broadwell.

In any case, we will take a look to this, in order to solve the issue on the hw that caused an regression. Thanks to Ilia for his hint.
Comment 3 Alejandro Piñeiro (freenode IRC: apinheiro) 2016-09-10 21:25:46 UTC
(In reply to Alejandro Piñeiro (freenode IRC: apinheiro) from comment #2)

> 
> Pending to test on Broadwell.

Confirmed that the patch introduces a regression on Broadwell too.
Comment 4 Alejandro Piñeiro (freenode IRC: apinheiro) 2016-09-10 22:10:04 UTC
Just sent a series that fixes the regression:
https://patchwork.freedesktop.org/series/12289/

Note that the test still crashes on Skylake, but that is unrelated with the problem detected on this bug (it was crashing before the commit at comment 0).


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.